force-app/main/default/objects/OCR_Settings__c/OCR_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Opportunity Contact Role set up data</description>
    <label>CRM : OCR : Settings</label>
</CustomObject>