force-app/main/default/objects/OCR_Settings__c/fields/Batch_Job_Lookback_Date__c.field-meta.xml
<CustomField>
    <fullName>Batch_Job_Lookback_Date__c</fullName>
    <description>Used in Batch Job CRM_OCR_Sync_Batch.cls to process OCR records whose Last Modified Date &gt;= Batch Job : Lookback Date e.g., all OCR records that got modified since 1/1/2010 00.00.00</description>
    <inlineHelpText>Used in Batch Job CRM_OCR_Sync_Batch.cls to process OCR records whose Last Modified Date &gt;= Batch Job : Lookback Date e.g., all OCR records that got modified since 1/1/2010 00.00.00</inlineHelpText>
    <label>Batch Job : Lookback Date</label>
    <type>DateTime</type>
</CustomField>