force-app/main/default/objects/OCR_Settings__c/fields/Default_Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Default_Contact_Role__c</fullName>
    <defaultValue>&quot;Sales Contact&quot;</defaultValue>
    <description>Default Contact Role on Opportunities</description>
    <inlineHelpText>Default Contact Role on Opportunities</inlineHelpText>
    <label>Default Contact Role</label>
    <length>20</length>
    <type>Text</type>
</CustomField>