force-app/main/default/objects/OCR_Settings__c/fields/Job_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Job_Batch_Size__c</fullName>
    <defaultValue>100</defaultValue>
    <description>Batch size (100 or 200) to avoid the governor limits</description>
    <inlineHelpText>Batch size (100 or 200) to avoid the governor limits</inlineHelpText>
    <label>Job Batch Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>