force-app/main/default/objects/OCR_Settings__c/fields/Job_Exec_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Job_Exec_Frequency__c</fullName>
    <description>Frequency the Job Executes in minutes e.g., every 5 minutes</description>
    <inlineHelpText>Frequency the Job Executes in minutes e.g., every 5 minutes</inlineHelpText>
    <label>Job Exec Frequency</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>