force-app/main/default/objects/OCR_Settings__c/fields/Job_Lookback_Duration__c.field-meta.xml
<CustomField>
    <fullName>Job_Lookback_Duration__c</fullName>
    <description>Job Lookback duration in minutes. It is used to find out the timestamp (Current Time - Job Lookback Duration) from which the job needs to process data</description>
    <inlineHelpText>Job Lookback duration in minutes. It is used to find out the timestamp (Current Time - Job Lookback Duration) from which the job needs to process data</inlineHelpText>
    <label>Job Lookback Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>