force-app/main/default/objects/OCR_Settings__c/fields/Job_Schedule_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Job_Schedule_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the job execution active? If No, the scheduled job will abort automatically otherwise will continue to add schedules when one scheduled run is complete</description>
    <inlineHelpText>Is the job execution active? If No, the scheduled job will abort automatically otherwise will continue to add schedules when one scheduled run is complete</inlineHelpText>
    <label>Job Schedule Enabled?</label>
    <type>Checkbox</type>
</CustomField>