force-app/main/default/objects/OCR_Settings__c/fields/OCR_Msg__c.field-meta.xml
<CustomField>
    <fullName>OCR_Msg__c</fullName>
    <description>Message to be shown when there is no Primary Contact and Role set with the Opportunity</description>
    <inlineHelpText>Message to be shown when there is no Primary Contact and Role set with the Opportunity</inlineHelpText>
    <label>OCR_Msg</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>